--- a/dts.gui/app.config
+++ b/dts.gui/app.config
@@ -2,27 +2,30 @@
 <configuration>
     <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IRegistrationService" closeTimeout="00:01:00"
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IRegistrationService" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-                    allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-                    useDefaultWebProxy="true">
+                    bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true">
                     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
                         maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-                    <security mode="None">
-                        <transport clientCredentialType="None" proxyCredentialType="None"
-                            realm="" />
-                        <message clientCredentialType="UserName" algorithmSuite="Default" />
+                    <reliableSession ordered="true" inactivityTimeout="00:10:00" />
+                    <security mode="Message">
+                        <message clientCredentialType="Windows" negotiateServiceCredential="true"
+                            algorithmSuite="Default" />
                     </security>
                 </binding>
-            </basicHttpBinding>
+            </wsDualHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:3030/RegistrationService"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRegistrationService"
-                contract="RegistrationService.IRegistrationService" name="BasicHttpBinding_IRegistrationService" />
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IRegistrationService"
+                contract="RegistrationService.IRegistrationService" name="WSDualHttpBinding_IRegistrationService">
+                <identity>
+                    <userPrincipalName value="S.Siddiqi@iontrading.com" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
