Updated Record callback

--- a/dts.gui/app.config
+++ b/dts.gui/app.config
@@ -23,7 +23,7 @@
                 binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IRegistrationService"
                 contract="RegistrationService.IRegistrationService" name="WSDualHttpBinding_IRegistrationService">
                 <identity>
-                    <userPrincipalName value="S.Siddiqi@iontrading.com" />
+                    <userPrincipalName value="Rocking\Suhail Siddiqi" />
                 </identity>
             </endpoint>
         </client>
