--- a/dts.gui/dts.gui.csproj
+++ b/dts.gui/dts.gui.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Extensions.cs" />
     <Compile Include="RecordServiceCallback.cs" />
     <Compile Include="Service References\RegistrationService\Reference.cs">
       <AutoGen>True</AutoGen>
