DataGrid available on Main window

--- a/dts.gui/dts.gui.csproj
+++ b/dts.gui/dts.gui.csproj
@@ -57,22 +57,36 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataGrid\DataGridDisplayOnlyColumnDescriptor.cs" />
     <Compile Include="DataGrid\DataGridModel.cs" />
+    <Compile Include="DataGrid\DataGridModelBase.cs" />
+    <Compile Include="DataGrid\DataGridViewModelBase.cs" />
     <Compile Include="DataGrid\IDataGridColumnDescriptor.cs" />
+    <Compile Include="DataGrid\IDataGridViewModel.cs" />
     <Compile Include="DataGrid\IDatGridRowModel.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="MainWindowModel.cs" />
     <Compile Include="Models\DisposeableObject.cs" />
     <Compile Include="Models\IIdentifiable.cs" />
     <Compile Include="Models\IInitializable.cs" />
     <Compile Include="Models\IPubSubRecord.cs" />
     <Compile Include="Models\IPubSubService.cs" />
     <Compile Include="NotifyingObject.cs" />
+    <Compile Include="Person\IPerson.cs" />
+    <Compile Include="Person\IPersonRowModel.cs" />
+    <Compile Include="Person\PersonDataGridModel.cs" />
+    <Compile Include="Person\PersonDataGridViewModel.cs" />
+    <Compile Include="Person\PersonRecord.cs" />
     <Compile Include="RecordServiceCallback.cs" />
     <Compile Include="Service References\RegistrationService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="View\DataGrid.xaml.cs">
+      <DependentUpon>DataGrid.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\IView.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -85,6 +99,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\DataGrid.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
