--- a/dts.gui/dts.gui.csproj
+++ b/dts.gui/dts.gui.csproj
@@ -65,6 +65,8 @@
     <Compile Include="DataGrid\IDataGridColumnDescriptor.cs" />
     <Compile Include="DataGrid\IDataGridViewModel.cs" />
     <Compile Include="DataGrid\IDatGridRowModel.cs" />
+    <Compile Include="DtsServiceClients\IPubSubServiceClientFactory.cs" />
+    <Compile Include="DtsServiceClients\IPubSubServiceClient.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="MainWindowModel.cs" />
     <Compile Include="Models\DisposeableObject.cs" />
@@ -79,6 +81,7 @@
     <Compile Include="Person\PersonDataGridModel.cs" />
     <Compile Include="Person\PersonDataGridViewModel.cs" />
     <Compile Include="Person\PersonRecord.cs" />
+    <Compile Include="Person\PersonServiceCallBack.cs" />
     <Compile Include="RecordServiceCallback.cs" />
     <Compile Include="Service References\RegistrationService\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -88,7 +91,9 @@
     <Compile Include="Services\DtsService.cs" />
     <Compile Include="Services\IPubSubServiceCallback.cs" />
     <Compile Include="Services\ISubscriptionManager.cs" />
+    <Compile Include="Services\PersonServiceClient.cs" />
     <Compile Include="Services\PersonSubscriptionManager.cs" />
+    <Compile Include="Services\SubscriptionManagerBase.cs" />
     <Compile Include="View\DataGrid.xaml.cs">
       <DependentUpon>DataGrid.xaml</DependentUpon>
     </Compile>
