Wiring done from View to Subscriber

--- a/dts.gui/app.config
+++ b/dts.gui/app.config
@@ -3,11 +3,12 @@
     <system.serviceModel>
         <bindings>
             <wsDualHttpBinding>
-                <binding name="WSDualHttpBinding_IRegistrationService" closeTimeout="00:01:00"
-                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-                    bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-                    messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true">
+                <binding name="WSDualHttpBinding_IPersonSubscriptionService"
+                    closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00"
+                    sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false"
+                    hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288"
+                    maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8"
+                    useDefaultWebProxy="true">
                     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
                         maxBytesPerRead="4096" maxNameTableCharCount="16384" />
                     <reliableSession ordered="true" inactivityTimeout="00:10:00" />
@@ -19,11 +20,12 @@
             </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:3030/RegistrationService"
-                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IRegistrationService"
-                contract="RegistrationService.IRegistrationService" name="WSDualHttpBinding_IRegistrationService">
+            <endpoint address="http://localhost:3030/PersonSubscriptionService"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IPersonSubscriptionService"
+                contract="PersonSubscriptionService.IPersonSubscriptionService"
+                name="WSDualHttpBinding_IPersonSubscriptionService">
                 <identity>
-                    <userPrincipalName value="Rocking\Suhail Siddiqi" />
+                    <userPrincipalName value="S.Siddiqi@iontrading.com" />
                 </identity>
             </endpoint>
         </client>
