Enhanced IPubSubService to accomodate multiple records updates.

--- a/dts.gui/app.config
+++ b/dts.gui/app.config
@@ -25,7 +25,7 @@
                 contract="PersonSubscriptionService.IPersonSubscriptionService"
                 name="WSDualHttpBinding_IPersonSubscriptionService">
                 <identity>
-                    <userPrincipalName value="S.Siddiqi@iontrading.com" />
+                    <userPrincipalName value="Rocking\Suhail Siddiqi" />
                 </identity>
             </endpoint>
         </client>
